// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AnalysisDetail /> should render 1`] = `
<div>
  <ViewHeader__SubviewHeader>
    <ViewHeader__SubviewHeaderTitle>
      PathoscopeBowtie
       for 
      bar
      <Connect(AnalysisCacheLink) />
    </ViewHeader__SubviewHeaderTitle>
    <ViewHeader__SubviewHeaderAttribution>
      bob
       started 
      <RelativeTime
        time="2019-05-28T19:04:25.201000Z"
      />
    </ViewHeader__SubviewHeaderAttribution>
  </ViewHeader__SubviewHeader>
  <PathoscopeViewer />
</div>
`;

exports[`<AnalysisDetail /> should render error when detail.algorithm is invalid] 1`] = `
<div>
  "Unusable analysis detail content")
</div>
`;

exports[`<AnalysisDetail /> should render expected view when [detail.algorithm='nuvs'] 1`] = `
<div>
  <ViewHeader__SubviewHeader>
    <ViewHeader__SubviewHeaderTitle>
      NuVs
       for 
      bar
      <Connect(AnalysisCacheLink) />
    </ViewHeader__SubviewHeaderTitle>
    <ViewHeader__SubviewHeaderAttribution>
      bob
       started 
      <RelativeTime
        time="2019-05-28T19:04:25.201000Z"
      />
    </ViewHeader__SubviewHeaderAttribution>
  </ViewHeader__SubviewHeader>
  <Connect(NuVsViewer) />
</div>
`;

exports[`<AnalysisDetail /> should render loading when [detail=null] 1`] = `<LoadingPlaceholder />`;

exports[`<AnalysisDetail /> should render message when error is not null 1`] = `<NotFound />`;

exports[`<AnalysisDetail /> should render pending when [detail.ready=false] 1`] = `
<Uncontrolled(Panel)>
  <PanelBody
    bsClass="panel"
    collapsible={false}
  >
    <LoadingPlaceholder
      margin="1.2rem"
      message="Analysis in progress"
    />
  </PanelBody>
</Uncontrolled(Panel)>
`;
